<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory Tracker</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="editor_activity_title_new_pet">Add an Item</string>
    <string name="editor_activity_title_edit_pet">Edit Item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_pet_successful">Item saved</string>
    <string name="editor_insert_pet_failed">Error with saving item</string>
    <string name="editor_update_pet_successful">Item updated</string>
    <string name="editor_update_pet_failed">Error with updating item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_pet_successful">Item deleted</string>
    <string name="editor_delete_pet_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this Item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Item</string>
    <string name="hint_pet_name">Name</string>
    <string name="unit_pet_weight">$</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="unknown_breed">Unknown breed</string>
    <string name="action_insert_new_data">New Item</string>
    <string name="hint_quantity">Quantity</string>
    <string name="quantity_overview">Quantity</string>
    <string name="price">Price</string>
    <string name="hint_price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price $</string>
    <string name="Sell">SELL</string>
    <string name="nothing_to_see_here">Please add a new item!</string>
    <string name="nothing_to_see_here_two">CLICK ABOVE!</string>
    <string name="order_button">ORDER</string>
    <string name="delete_button">DELETE</string>
    <string name="action_order">Order</string>
    <string name="delete_stock">Delete?</string>
    <string name="do_you_really_want_to_delete">Are you sure?</string>
    <string name="deleting_stock_successful">Delete Successful</string>
    <string name="unable_to_delete_stock">Delete error</string>
    <string name="action_picture">Take Picture</string>
    <string name="select_picture">Take Picture</string>

    <string name="new_stock">New Stock</string>
    <string name="edit_stock">Edit Stock</string>
    <string name="could_not_load_image">Could Not Load</string>

</resources>
